Some locs modernized

--- a/localisation/english/!!_mod_compo_l_english.yml
+++ b/localisation/english/!!_mod_compo_l_english.yml
@@ -16,12 +16,12 @@
  job_gpm_tec_precursor_archaeologist_2:0 "Precursor Archaeologist"
  job_gpm_tec_precursor_archaeologist_2_plural:0 "Precursor Archaeologists"
  job_gpm_tec_precursor_archaeologist_2_desc:0 "Archaeologists specialised in the study of ancient civilizations."
- job_gpm_tec_precursor_archaeologist_2_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2£ $job_gpm_tec_precursor_archaeologist_2_plural$ turn §Y$tec_loc_consumer_goods$§! into £trigger_tec_research£ §YResearch§! and $tec_loc_minor_artifacts$"
+ job_gpm_tec_precursor_archaeologist_2_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2£ $job_gpm_tec_precursor_archaeologist_2_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_research_resources$§! and §Y$tec_loc_minor_artifacts$§!"
 
  job_gpm_tec_precursor_archaeologist_2_drone:0 "Precursor Archaeologist Drone"
  job_gpm_tec_precursor_archaeologist_2_drone_plural:0 "Precursor Archaeologist Drones"
  job_gpm_tec_precursor_archaeologist_2_drone_desc:0 "$job_gpm_tec_precursor_archaeologist_2_desc$"
- job_gpm_tec_precursor_archaeologist_2_drone_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2_drone£ $job_gpm_tec_precursor_archaeologist_2_drone_plural$ turn §Y$tec_loc_energy$§! into £trigger_tec_research£ §YResearch Points§! and $tec_loc_minor_artifacts$"
+ job_gpm_tec_precursor_archaeologist_2_drone_effect_desc:0 "£job_gpm_tec_precursor_archaeologist_2_drone£ $job_gpm_tec_precursor_archaeologist_2_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_research_resources$§! and §Y$tec_loc_minor_artifacts$§!"
  mod_job_gpm_tec_precursor_archaeologist_2_add:0 "$job_gpm_tec_precursor_archaeologist_2$ Jobs"
  mod_job_gpm_tec_precursor_archaeologist_2_drone_add:0 "$job_gpm_tec_precursor_archaeologist_2_drone$ Jobs"
 # /
