--- a/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R5_l_english.yml
@@ -98,7 +98,7 @@
 	job_tec_processcap_drone:0 "Decoder" #Data-Cleanser - depurator
 	job_tec_processcap_drone_plural:0 "Decoders"
 	job_tec_processcap_drone_desc:0 "The sole purpose of these drones is capt, redirect and amplify the machine consciousness signal, separating properly orders, commands and calculations, amplifying the overall processing capacity applied to each unit and asset at a local or global scale."
-	job_tec_processcap_drone_effect_desc:0 "£job_tec_processcap_drone£ $job_tec_processcap_drone_plural$ consume $tec_loc_energy$ to generate £sr_tec_machine_processing_empire£ §Y$sr_tec_machine_processing_empire$§!."
+	job_tec_processcap_drone_effect_desc:0 "£job_tec_processcap_drone£ $job_tec_processcap_drone_plural$ consume §Y$tec_loc_energy$§! to generate §Y$tec_loc_sr_tec_machine_processing_empire$§!."
 	mod_job_tec_processcap_drone_add:0 "$job_tec_processcap_drone$ Jobs"
 	mod_job_tec_processcap_drone_per_pop:0 "§G+1§! £mod_job_tec_processcap_drone_add£ $job_tec_processcap_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_processcap_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_processcap_drone_add£ per $VALUE$ £pop£"
