--- a/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
+++ b/localisation/english/replace/!_evolved_to_do_R6_l_english.yml
@@ -937,7 +937,7 @@
 	job_tec_ascendant_drone:0 "Ascendant"
 	job_tec_ascendant_drone_plural:0 "Ascendants"
 	job_tec_ascendant_drone_desc:0 "Few are the drones consecrated to the task of fully understanding the meaning behind the questions faced without logical answer, but their duty at finding self-determination in either an external or internal answer drives them forward."
-	job_tec_ascendant_drone_effect_desc:0 "£job_tec_ascendant_drone£ $job_tec_ascendant_drone_plural$ consume $tec_loc_energy$ to generate £unity£ §YUnity§! and £engineering£ §YEngineering§!."
+	job_tec_ascendant_drone_effect_desc:0 "£job_tec_ascendant_drone£ $job_tec_ascendant_drone_plural$ consume §Y$tec_loc_energy$§! to generate §Y$tec_loc_unity$§! and §Y$tec_loc_engineering$§!."
 	mod_job_tec_ascendant_drone_add:0 "$job_tec_ascendant_drone$ Jobs"
 	mod_job_tec_ascendant_drone_per_pop:0 "§G+1§! £mod_job_tec_ascendant_drone_add£ $job_tec_ascendant_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_ascendant_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_ascendant_drone_add£ per $VALUE$ £pop£"
@@ -1736,7 +1736,7 @@
 	job_tec_biospawning_drone:0 "Podtender Drone"
 	job_tec_biospawning_drone_plural:0 "Podtender Drones"
 	job_tec_biospawning_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
-	job_tec_biospawning_drone_effect_desc:0 "£job_tec_biospawning_drone£ $job_tec_biospawning_drone_plural$ assemble new drone £pop£ §YPops§! with $tec_loc_food$ or $tec_loc_minerals$."
+	job_tec_biospawning_drone_effect_desc:0 "£job_tec_biospawning_drone£ $job_tec_biospawning_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
 	mod_job_tec_biospawning_drone_add:0 "$job_tec_biospawning_drone$ Jobs"
 	mod_job_tec_biospawning_drone_per_pop:0 "§G+1§! £mod_job_tec_biospawning_drone_add£ $job_tec_biospawning_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_biospawning_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biospawning_drone_add£ per $VALUE$ £pop£"
@@ -1746,7 +1746,7 @@
 	job_tec_biomass_drone:0 "Podtender Drone"
 	job_tec_biomass_drone_plural:0 "Podtender Drones"
 	job_tec_biomass_drone_desc:0 "These drones devote themselves to ensure the correct growth and caring the newest or youngest members of the collective."
-	job_tec_biomass_drone_effect_desc:0 "£job_tec_biomass_drone£ $job_tec_biomass_drone_plural$ assemble new drone £pop£ §YPops§! with $tec_loc_food$ or $tec_loc_minerals$."
+	job_tec_biomass_drone_effect_desc:0 "£job_tec_biomass_drone£ $job_tec_biomass_drone_plural$ assemble new drone £pop£ §YPops§! with §Y$tec_loc_food$§! or §Y$tec_loc_minerals$§!."
 	mod_job_tec_biomass_drone_add:0 "$job_tec_biomass_drone$ Jobs"
 	mod_job_tec_biomass_drone_per_pop:0 "§G+1§! £mod_job_tec_biomass_drone_add£ $job_tec_biomass_drone$ Job per $VALUE$ Pops"
 	mod_job_tec_biomass_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_biomass_drone_add£ per $VALUE$ £pop£"
