--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -31,32 +31,32 @@
 		councilor_civic_tec_regular_stratocracy:0 "Master Strategist"
 		councilor_civic_tec_regular_stratocracy_female:0 "$councilor_civic_tec_regular_stratocracy$"
 		councilor_civic_tec_regular_stratocracy_desc:0 "The $TITLE$ is the direct representation of the military order."
-		councilor_civic_tec_regular_stratocracy_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_stratocracy_bonus$§! $tec_loc_edict_cap_icon$ from £job_soldier£ §YMilitary Jobs§!"
+		councilor_civic_tec_regular_stratocracy_custom_modifier:0 "$mod_planet_soldiers_edict_funds_produces_add$: §G+$@councilor_civic_tec_regular_stratocracy_bonus$§!"
 
 		councilor_civic_tec_regular_irenic_bureaucracy:0 "Embodiment of Order"
 		councilor_civic_tec_regular_irenic_bureaucracy_female:0 "$councilor_civic_tec_regular_irenic_bureaucracy$"
 		councilor_civic_tec_regular_irenic_bureaucracy_desc:0 "The $TITLE$ serves as both head bureaucrat and main representative of the government affairs, guiding its subordinates towards max efficiency."
-		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_irenic_bureaucracy_bonus$§! $tec_loc_job_output$ while at §YPeace§!"
+		councilor_civic_tec_regular_irenic_bureaucracy_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_archivist:0 "Archlibrarian"
 		councilor_civic_tec_regular_archivist_female:0 "$councilor_civic_tec_regular_archivist$"
 		councilor_civic_tec_regular_archivist_desc:0 "Few things are known of the private or public life of the $TITLE$, but tradition indicate its one of the few individuals who know and have access to each single archived file, each single ordered database."
-		councilor_civic_tec_regular_archivist_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_archivist_bonus$§! £unity£ from £influence£ §YResearch Agreements§!"
+		councilor_civic_tec_regular_archivist_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_occultist:0 "Keeper of Secrets"
 		councilor_civic_tec_regular_occultist_female:0 "$councilor_civic_tec_regular_occultist$"
 		councilor_civic_tec_regular_occultist_desc:0 "Being part of the most secretive layers of the cult, the $TITLE$ has seen what others can just dream, and knows what others can't even imagine to know."
-		councilor_civic_tec_regular_occultist_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_occultist_bonus$§! £unity£ from £job_tec_grand_occultist£ §YOccultist Jobs§!"
+		councilor_civic_tec_regular_occultist_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_science_directorate:0 "Senior Science Director"
 		councilor_civic_tec_regular_science_directorate_female:0 "$councilor_civic_tec_regular_science_directorate$"
 		councilor_civic_tec_regular_science_directorate_desc:0 "The $TITLE$ ensures fundamental research is promoted and shared between departments."
-		councilor_civic_tec_regular_science_directorate_custom_modifier:0 "Not needed"
+		councilor_civic_tec_regular_science_directorate_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_inventinkers:0 "Supreme Tinker"
 		councilor_civic_tec_regular_inventinkers_female:0 "$councilor_civic_tec_regular_inventinkers$"
 		councilor_civic_tec_regular_inventinkers_desc:0 "$TITLE$s are top-of-tier tinkers, chosen by tinkers guilds and the government itself, to oversee the design and creation of new tools and inventions."
-		councilor_civic_tec_regular_inventinkers_custom_modifier:0 "Not needed"
+		councilor_civic_tec_regular_inventinkers_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_socialguards:0 "Protector of Rights"
 		councilor_civic_tec_regular_socialguards_female:0 "$councilor_civic_tec_regular_socialguards$"
@@ -113,70 +113,68 @@
 		councilor_civic_tec_regular_cult_personality:0 "Identity Advisor"
 		councilor_civic_tec_regular_cult_personality_female:0 "$councilor_civic_tec_regular_cult_personality$"
 		councilor_civic_tec_regular_cult_personality_desc:0 "It is the duty of the $TITLE$ to be a proper advisor and safeguard of the loyalty to the leader."
-		councilor_civic_tec_regular_cult_personality_custom_modifier:0 "Not needed"
+		councilor_civic_tec_regular_cult_personality_custom_modifier:0 "$MOD_COUNCILOR_SKILL_ADD$: §G+$@councilor_civic_tec_regular_cult_personality_bonus$§!"
 
 		councilor_civic_tec_regular_caste_system:0 "Caste Orderer"
 		councilor_civic_tec_regular_caste_system_female:0 "$councilor_civic_tec_regular_caste_system$"
 		councilor_civic_tec_regular_caste_system_desc:0 "The $TITLE$ reviews and ensures all castes are treated with the proper respect and dignity each one deserves."
-		councilor_civic_tec_regular_caste_system_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_caste_system_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_master_engineers:0 "Chief Mega-Engineer"
 		councilor_civic_tec_regular_master_engineers_female:0 "$councilor_civic_tec_regular_master_engineers$"
 		councilor_civic_tec_regular_master_engineers_desc:0 "$TITLE$ approve, enhance and control the new inventions and structural developments of the empire."
-		councilor_civic_tec_regular_master_engineers_custom_modifier:0 "§Y+2.5%§! Starbase Upgrade Speed\n§Y+2.5%§! Megastructure Build Speed"
-		# Improve loc ^
+		councilor_civic_tec_regular_master_engineers_custom_modifier:0 "$MOD_STARBASE_UPGRADE_SPEED_MULT$: §G+2.5%§!\n$MOD_MEGASTRUCTURE_BUILD_SPEED_MULT$: §G+2.5%§!"
 
 		councilor_civic_tec_regular_patronage:0 "Talent Seeker"
 		councilor_civic_tec_regular_patronage_female:0 "$councilor_civic_tec_regular_patronage$"
 		councilor_civic_tec_regular_patronage_desc:0 "$TITLE$s have the task of finding new talents among promotions and young promises."
-		councilor_civic_tec_regular_patronage_custom_modifier:0 "§Y+1§! Leader capacity each §Y3§! Councilor levels\n§Y+2.5%§! Leader Experience Gain"
-		# Improve loc ^
+		councilor_civic_tec_regular_patronage_custom_modifier:0 "$MOD_COUNTRY_LEADER_CAP_ADD$: §G+$@councilor_civic_tec_regular_patronage_bonus$§!\n$MOD_LEADER_SPECIES_EXP_GAIN$: §G+2.5%§!"
 
 		councilor_civic_tec_regular_surface_exploiters:0 "Extraction Monitor"
 		councilor_civic_tec_regular_surface_exploiters_female:0 "$councilor_civic_tec_regular_surface_exploiters$"
 		councilor_civic_tec_regular_surface_exploiters_desc:0 "$TITLE$s improve the rate of colonial exploitation and create new ways to increase its efficiency."
-		councilor_civic_tec_regular_surface_exploiters_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_surface_exploiters_custom_modifier:0 "Positive Effects of Overstripping Deposits: §G+10%§!"
 
 		councilor_civic_tec_regular_political_virtue:0 "Democratic Advisor"
 		councilor_civic_tec_regular_political_virtue_female:0 "$councilor_civic_tec_regular_political_virtue$"
 		councilor_civic_tec_regular_political_virtue_desc:0 "The empire $TITLE$ is tasked with searching the best democratic ways of representing the diverse ideas of its society."
-		councilor_civic_tec_regular_political_virtue_custom_modifier:0 "§Y-1§! Empire Sprawl from Pops\n§Y+1%§! Faction Approval"
+		councilor_civic_tec_regular_political_virtue_custom_modifier:0 "NOT USED"
 		# Improve loc ^
 
 
 		councilor_civic_tec_regular_eco_keepers:0 "Elder Druid"
 		councilor_civic_tec_regular_eco_keepers_female:0 "$councilor_civic_tec_regular_eco_keepers$"
 		councilor_civic_tec_regular_eco_keepers_desc:0 "Wisest amongst its brethren, the $TITLE$ embraces nature at a deeper level, being a paragon of the natural faith."
-		councilor_civic_tec_regular_eco_keepers_custom_modifier:0 "§Y+10%§! £job_druid£ Druid output"
+		councilor_civic_tec_regular_eco_keepers_custom_modifier:0 "NOT USED"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_eco_engineers:0 "Environmental Architect"
 		councilor_civic_tec_regular_eco_engineers_female:0 "$councilor_civic_tec_regular_eco_engineers$"
 		councilor_civic_tec_regular_eco_engineers_desc:0 "The $TITLE$ ensures the reformation and recreation of terrains and spaces is perfect or close to perfection."
-		councilor_civic_tec_regular_eco_engineers_custom_modifier:0 "§Y-2.5%§! Terraforming Cost"
+		councilor_civic_tec_regular_eco_engineers_custom_modifier:0 "$mod_terraforming_cost_mult$: §G-2.5%§!"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_evolutionary_architects:0 "High Evolutionary"
 		councilor_civic_tec_regular_evolutionary_architects_female:0 "$councilor_civic_tec_regular_evolutionary_architects$"
 		councilor_civic_tec_regular_evolutionary_architects_desc:0 "Heading a elite team of genetic engineers, the $TITLE$ tailors a new generation of improved, enhanced and better individuals."
-		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "§Y-2.5%§! Species Modification Cost"
+		councilor_civic_tec_regular_evolutionary_architects_custom_modifier:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-2.5%§!"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_machine_cult:0 "Fabricator-Logis"
 		councilor_civic_tec_regular_machine_cult_female:0 "$councilor_civic_tec_regular_machine_cult$"
 		councilor_civic_tec_regular_machine_cult_desc:0 "The $TITLE$ serves as the head of sub-management regulators of the empire cult, ensuring the robotic development is accelerated and propagated amongst the population."
-		councilor_civic_tec_regular_machine_cult_custom_modifier:0 "§Y+0.05§! £unity£ Unity from Robotic Pops"
+		councilor_civic_tec_regular_machine_cult_custom_modifier:0 "NOT USED"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_war_engineers:0 "Siegemaster"
 		councilor_civic_tec_regular_war_engineers_female:0 "Siegemistress"
 		councilor_civic_tec_regular_war_engineers_desc:0 "The $TITLE$ commands a top-notch team of war engineers dedicated to create the best and most efficient war craft."
-		councilor_civic_tec_regular_war_engineers_custom_modifier:0 "TO DO"
+		councilor_civic_tec_regular_war_engineers_custom_modifier:0 "NOT USED"
 
 		councilor_civic_tec_regular_naval_traditions:0 "Battle Commander"
 		councilor_civic_tec_regular_naval_traditions_female:0 "$councilor_civic_tec_regular_naval_traditions$"
 		councilor_civic_tec_regular_naval_traditions_desc:0 "$TITLE$ control the battle before it even starts, planning the strategies accordingly and adding a big advantage to the empire."
-		councilor_civic_tec_regular_naval_traditions_custom_modifier:0 "§Y+0.5§! £unity£ Unity from Anchorages\n§Y+0.5§! £unity£ Unity from Shipyards"
+		councilor_civic_tec_regular_naval_traditions_custom_modifier:0 "$tec_loc_unity$ from Anchorages: §G+0.5§!\n§Y+0.5§! £unity£ Unity from Shipyards"
 		# Improve loc ^
 
 		councilor_civic_tec_regular_land_of_plenty:0 "Provider of Plenty"
@@ -214,7 +212,7 @@
 		councilor_civic_tec_regular_research_council:0 "Development Assistant"
 		councilor_civic_tec_regular_research_council_female:0 "$councilor_civic_tec_regular_research_council$"
 		councilor_civic_tec_regular_research_council_desc:0 "The $TITLE$ is tasked with a direct cooperation and regulation with the empire main researchers."
-		councilor_civic_tec_regular_research_council_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_research_council_bonus$§! $tec_loc_edict_cap_icon$ from £job_researcher£ §YResearcher Jobs§!"
+		councilor_civic_tec_regular_research_council_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_research_council_bonus$§! $tec_loc_edict_funds_icon$ from £job_researcher£ §YResearcher Jobs§!"
 
 		#"This councilor inherits the §Y$tec_loc_research_resources$§! production of the empire £scientist£ §Y$councilor_research$§!"
 
@@ -228,17 +226,17 @@
 		councilor_civic_tec_regular_divine_circle:0 "Archpriest"
 		councilor_civic_tec_regular_divine_circle_female:0 "Archpriestess"
 		councilor_civic_tec_regular_divine_circle_desc:0 "The $TITLE$ serves as a paragon and guide for the faith of its empire."
-		councilor_civic_tec_regular_divine_circle_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_divine_circle_bonus$§! $tec_loc_edict_cap_icon$ from £job_priest£ §YPriest Jobs§!"
+		councilor_civic_tec_regular_divine_circle_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_divine_circle_bonus$§! $tec_loc_edict_funds_icon$ from £job_priest£ §YPriest Jobs§!"
 
 		councilor_civic_tec_regular_military_council:0 "Lord Commander"
 		councilor_civic_tec_regular_military_council_female:0 "$councilor_civic_tec_regular_military_council$"
 		councilor_civic_tec_regular_military_council_desc:0 "Few people question the dexterity and tactical prowess the $TITLE$ provides."
-		councilor_civic_tec_regular_military_council_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_military_council_bonus$§! $tec_loc_edict_cap_icon$ from £job_soldier£ §YSoldier Jobs§!"
+		councilor_civic_tec_regular_military_council_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_military_council_bonus$§! $tec_loc_edict_funds_icon$ from £job_soldier£ §YSoldier Jobs§!"
 
 		councilor_civic_tec_regular_executive_committee:0 "Chief Executive"
 		councilor_civic_tec_regular_executive_committee_female:0 "$councilor_civic_tec_regular_executive_committee$"
 		councilor_civic_tec_regular_executive_committee_desc:0 "The $TITLE$ coordinates an efficient corps of bureaucratic affairs and management."
-		councilor_civic_tec_regular_executive_committee_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_executive_committee_bonus$§! $tec_loc_edict_cap_icon$ from £job_bureaucrat£ §YAdministrator Jobs§!"
+		councilor_civic_tec_regular_executive_committee_custom_modifier:0 "§Y+$@councilor_civic_tec_regular_executive_committee_bonus$§! $tec_loc_edict_funds_icon$ from £job_bureaucrat£ §YAdministrator Jobs§!"
 
 		councilor_civic_tec_regular_genetic_ascendancy:0 "Lineage Watcher"
 		councilor_civic_tec_regular_genetic_ascendancy_female:0 "$councilor_civic_tec_regular_genetic_ascendancy$"
@@ -532,17 +530,17 @@
 	councilor_civic_tec_corporate_researchbureau:0 "Development Acquirer"
 	councilor_civic_tec_corporate_researchbureau_female:0 "$councilor_civic_tec_corporate_researchbureau$"
 	councilor_civic_tec_corporate_researchbureau_desc:0 "The $TITLE$ applies technological prowess to economical growth."
-	councilor_civic_tec_corporate_researchbureau_custom_modifier:0 "§Y+$@councilor_civic_tec_corporate_researchbureau_bonus$§! $tec_loc_edict_cap_icon$ from £job_researcher£ §YResearcher Jobs§!"
+	councilor_civic_tec_corporate_researchbureau_custom_modifier:0 "§Y+$@councilor_civic_tec_corporate_researchbureau_bonus$§! $tec_loc_edict_funds_icon$ from £job_researcher£ §YResearcher Jobs§!"
 
 	councilor_civic_tec_corporate_innovative:0 "Innovation Acquirer"
 	councilor_civic_tec_corporate_innovative_female:0 "$councilor_civic_tec_corporate_innovative$"
 	councilor_civic_tec_corporate_innovative_desc:0 "The $TITLE$ create cultural influential lines that empower the creation of wealth."
-	councilor_civic_tec_corporate_innovative_custom_modifier:0 "§Y+$@councilor_civic_tec_corporate_innovative_bonus$§! $tec_loc_edict_cap_icon$ from £job_manager£ §YAdministrator Jobs§!"
+	councilor_civic_tec_corporate_innovative_custom_modifier:0 "§Y+$@councilor_civic_tec_corporate_innovative_bonus$§! $tec_loc_edict_funds_icon$ from £job_manager£ §YAdministrator Jobs§!"
 
 	councilor_civic_tec_corporate_militarybureau:0 "Military Acquirer"
 	councilor_civic_tec_corporate_militarybureau_female:0 "$councilor_civic_tec_corporate_militarybureau$"
 	councilor_civic_tec_corporate_militarybureau_desc:0 "Followed by a strict military sub-contracted command, the $TITLE$ maximizes the empire military economical performance."
-	councilor_civic_tec_corporate_militarybureau_custom_modifier:0 "§Y+$@councilor_civic_tec_corporate_militarybureau_bonus$§! $tec_loc_edict_cap_icon$ from £job_soldier£ §YMilitary Jobs§!"
+	councilor_civic_tec_corporate_militarybureau_custom_modifier:0 "§Y+$@councilor_civic_tec_corporate_militarybureau_bonus$§! $tec_loc_edict_funds_icon$ from £job_soldier£ §YMilitary Jobs§!"
 
 	councilor_civic_tec_corporate_flagshipbureau:0 "Flagship Coordinator"
 	councilor_civic_tec_corporate_flagshipbureau_female:0 "$councilor_civic_tec_corporate_flagshipbureau$"
