--- a/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ethics_authorities_l_english.yml
@@ -125,7 +125,7 @@
 	AUTH_HIVE_MIND_NEW_PRODUCTION_BONUS:0 "§EProduction Bonus:§! £unity£ §HUnity§! drones provide extra £amenities_no_happiness£ §HAmenities§! and £amenities_no_happiness£ §HAmenities§!.\n\n"
 
 	AUTH_TEC_HIVE_CYB_DIFF_SET:0 "§EThis authority changes gameplay and building visual and effect sets.§!\n\n"
-	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for $tec_loc_energy$ upkeep.\nAllows the §Yassimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
+	AUTH_TEC_HIVE_CYB_TRAIT_BONUS:0 "§EBonus trait:§! £pops£ Pops will gain the §H$trait_hive_mind$§! and §H$trait_cybernetic$§! Traits.\nCyborg pops exchange part of their §Eupkeep§! for §Y$tec_loc_energy$§! upkeep.\nAllows the §Yassimilation§! of sentient biological organisms, becoming new drones of the collective.\n\n"
 	AUTH_TEC_HIVE_CYB_PRODUCTION_BONUS:0 "§EProduction Bonus:§! Each £unity£ §HUnity§! drone provides +§H1§!% Menial drone Output.\n"
 	#"§EProduction Mechanic:§! £pops£ Jobs are §EMore effective§! on planets with the £stability£ §YSame Designation§!.\n\n"
 	AUTH_TEC_HIVE_CYB_FOREIGN_POP_SURVIVAL:1 "§ERestriction:§! Non-§HHive Mind§! £pop£ Pops must be assimilated, enslaved or purged, if not §Hempathic§!.\n"
