--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -97,7 +97,7 @@
 
 	job_high_priest_effect_desc:1 "['concept_tec_job_high_priest_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_amenities$§!"
 
-	job_bureaucrat_effect_desc:1 "['concept_tec_job_bureaucrat_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_capacity$§!"
+	job_bureaucrat_effect_desc:1 "['concept_tec_job_bureaucrat_plural_icon'] turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_funds$§!"
 
 	job_coordinator:0 "Coordinator"
 	job_coordinator_plural:0 "Coordinators"
@@ -107,7 +107,7 @@
 	mod_job_coordinator_per_pop:0 "§G+1§! $job_coordinator$ Job per $VALUE$ Pops"
 	mod_job_coordinator_per_pop_short:0 "\n§G+1§! £mod_job_coordinator_add£ per $VALUE$ £pop£"
 
-	job_synapse_drone_effect_desc:4 "£job_synapse_drone£ $job_synapse_drone_plural$ turn §Y$tec_loc_energy$§! and [Owner.GetTecSynapseDroneUpkeep] into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_capacity$§!." 
+	job_synapse_drone_effect_desc:4 "£job_synapse_drone£ $job_synapse_drone_plural$ turn §Y$tec_loc_energy$§! and [Owner.GetTecSynapseDroneUpkeep] into §Y$tec_loc_unity$§! and §Y$tec_loc_edict_funds$§!."
 
 	job_brain_drone_effect_desc:0 "£job_brain_drone£ $job_brain_drone_plural$ turn [owner.GetTecBrainDroneUpkeep] into §Y$tec_loc_research_resources$§! for new technologies"
 
@@ -135,9 +135,9 @@
 
 	job_culture_worker_effect_desc:0 "£job_culture_worker£ $job_culture_worker_plural$ turn §Y$tec_loc_consumer_goods$§! into §Y$tec_loc_unity$§!$tec_culture_worker_cleanup$ and £mod_ethic_attraction_mult£ §Y$MOD_POP_GOVERNMENT_ETHIC_ATTRACTION$§!."
 	tec_culture_worker_cleanup:0 "[Owner.tec_cw_mat_bonus][Owner.tec_cw_mil_bonus][Owner.tec_cw_auth_bonus][Owner.tec_cw_xen_bonus][Owner.tec_cw_eco_bonus][Owner.tec_cw_comp_bonus][Owner.tec_cw_eli_bonus]"
-	tec_cw_mat_bonus_desc:0 ", §Y$tec_loc_edict_capacity$§!"
+	tec_cw_mat_bonus_desc:0 ", §Y$tec_loc_edict_funds$§!"
 	tec_cw_spi_bonus_desc:0 ", §Y$mod_planet_pops_upkeep_mult$ Reduction§!"
-	tec_cw_mil_bonus_desc:0 ", §Y$tec_loc_naval_capacity$§!"
+	tec_cw_mil_bonus_desc:0 ", §Y$tec_loc_naval_cap$§!"
 	tec_cw_pac_bonus_desc:0 ", §Y$mod_pop_lifestyle_trade_mult$§!"
 	tec_cw_egal_bonus_desc:0 ", §Y$MOD_POP_CITIZEN_HAPPINESS$§!"
 	tec_cw_auth_bonus_desc:0 ", §Y$tec_loc_stability$§!"
@@ -187,7 +187,7 @@
 # MECHANICS replaces
 # ------------------------------------------------------------
 # habitat changes
-	habitat_0_CONSTRUCTION_INFO_DELAYED:4 "A Habitat can only house habitat-specific £building£ §YBuildings§!. If built in orbit over a planet with $tec_loc_minerals$, $tec_loc_energy$, or £trigger_tec_research£ §YResearch§! deposits, special £district£ §YDistricts§! will be available. Habitats built in orbit of planets without usable deposits will use the spared space for hydroponic £food£ §YFood Districts§! "
+	habitat_0_CONSTRUCTION_INFO_DELAYED:4 "A Habitat can only house habitat-specific £building£ §YBuildings§!. If built in orbit over a planet with §Y$tec_loc_minerals$§!, §Y$tec_loc_energy$§!, or §Y$tec_loc_research_resources$§! deposits, special §Y$tec_loc_districts$§! will be available. Habitats built in orbit of planets without usable deposits will use the spared space for hydroponic £food£ §YFood Districts§! "
  
 # DEPOSITS replaces
 # ------------------------------------------------------------
@@ -213,33 +213,8 @@
 	trait_latent_psionic_desc:0 "§LThis species has latent psionic abilities, which are dormant in most of its members. Although quite rare, these powers will manifest in some leaders.§!\n"
 	trait_psionic_desc:0 "§LAll members of this species possess powerful psionic abilities. They typically communicate with each other through telepathy.§!\n"
 
- # Lithoids buff
-	TRAIT_LITHOID_GASEOUS_BYPRODUCTS_EFFECT:1 "Each pop working as a slave or better produces 0.05 £exotic_gases£ §Y$exotic_gases$§! per month."
-	TRAIT_LITHOID_SCINTILLATING_EFFECT:1 "Each pop working as a slave or better produces 0.05 £rare_crystals£ §Y$rare_crystals$§! per month."
-	TRAIT_LITHOID_VOLATILE_EXCRETIONS_EFFECT:1 "Each pop working as a slave or better produces 0.05 £volatile_motes£ §Y$volatile_motes$§! per month."
-
  # Zombie
 	TRAIT_ZOMBIE_EFFECT: "Cannot generate §YLeaders§!\nCannot be employed in §Y$pop_cat_ruler$§! or §Y$pop_cat_specialist$§! Jobs"
- # Inorganic Buff
-	inorganic_breath_tooltip:1 "Each pop working as a slave or better produces 0.05 £exotic_gases£ §Y$exotic_gases$§! per month."
-
- # Dragon buff
-	TRAIT_DRAKE_SCALED_EFFECT:0 "Each pop working as a slave or better produces 0.1 §Y$tec_loc_alloys$§! per month."
-
- # Overtuned changes
-	spliced_adaptability_tooltip:0 "Habitability: §G+20%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	juiced_power_tooltip:0 "Worker Pop Resource Output: §G+5%§!\n£pop£ Species £trigger_tec_basic_resources£ £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	crack_miner_tooltip:0 "$tec_loc_minerals$ from £pops£ Jobs: §G+15%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	farm_hands_tooltip:0 "£food£ Food from £pops£ Jobs: §G+15%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	technical_skill_tooltip:0 "$tec_loc_energy$ from £pops£ Jobs: §G+15%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	crafted_smiles_tooltip:0 "£amenities£ Amenities from £pops£ Jobs: §G+15%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	low_maintenance_tooltip:0 "Pop Consumer Goods Upkeep: §G-15%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	artificial_intelligence_tooltip:0 "£physics£ Physics Research: §G+10%§!\n£society£ Society Research: §G+10%§!\n£engineering£ Engineering Research: §G+10%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	gene_mentorship_tooltip:0 "Leader Experience Gain: §G+25%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	expressed_tradition_tooltip:0 "£unity£ Unity from £pops£ Jobs: §G+10%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+10%§!"
-	elevated_synapses_tooltip:1 "£physics£ Physics Research: §G+20%§!\n£society£ Society Research: §G+20%§!\n£engineering£ Engineering Research: §G+20%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+30%§!"
-	preplanned_growth_tooltip:0 "Pop Growth Speed: §G+30%§!\nPop Housing Usage: §G-10%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+30%§!"
-	excessive_endurance_tooltip:0 "Habitability: §G+30%§!\nResources from Jobs: §G+5%§!\n£pop£ Species £trigger_tec_basic_resources£ Base Resources Upkeep: §R+30%§!"
 
 # STARBASE BUILDINGS Replace
 # ------------------------------------------------------------
