--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -84,7 +84,7 @@
  tr_versatility_spatial_optimization_tooltip:0 "£building£ §YCapital Buildings§! provide the planet with §G+5%§! £housing£ Housing, up to §G+20%§!."
 
 # ------------------------------------------------- Aptitude
- tr_aptitude_champions_of_the_empire_desc:1 "Per $admiral_with_icon$ and $general_with_icon$ level\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$ level\n$t$$tec_loc_admincap$: §G+1§!\nPer $scientist_with_icon$ level\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
+ tr_aptitude_champions_of_the_empire_desc:1 "Per $admiral_with_icon$ and $general_with_icon$ level\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$ level\n$t$$tec_loc_admin_cap$: §G+1§!\nPer $scientist_with_icon$ level\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
 
 # Psionic
 # ------------------------------------------------------------
@@ -165,10 +165,10 @@
  tr_cybernetics_metabolic_reprocessing_tooltip:0 "Empire Size from Cyborg Pops: §G-10%§!"
 
  tr_cybernetics_integrated_anatomy:0 "Integrated Anatomy"
- tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species $tec_loc_energy$ Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional $tec_loc_energy$ Upkeep."
+ tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species §Ytec_loc_energy$§! Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional $tec_loc_energy$ Upkeep."
 
  tr_cybernetics_assembly_standards:0 "Mechadendrital Crucible"
- tr_cybernetics_assembly_standards_tooltip:0 "£building£ §YMechanical Assembly Buildings§! replace their passive mechanical assembly and jobs with a single §YMaster Assembler§! job, which provide dynamic and additional £job_roboticist£ §YAssembly§! and £engineering£ §YEngineering§! Research based on the building tier, and a moderate amount of £amenities£ §YAmenities§!.\nAllows the assembly of Cyborg pops on Mechanical Assembly Buildings."
+ tr_cybernetics_assembly_standards_tooltip:0 "£building£ §YMechanical Assembly Buildings§! replace their passive mechanical assembly and jobs with a single §YMaster Assembler§! job, which provide dynamic and additional £job_roboticist£ §YAssembly§! and §Y$tec_loc_engineering$§! based on the building tier, and a moderate amount of §Y$tec_loc_amenities$§!.\nAllows the assembly of Cyborg pops on Mechanical Assembly Buildings."
  #Unlocks £building£ §YMechadendrite Synthetizers§!.\n£building£ Mechadendrite Synthetizers replace standard assembly buildings, and assemble both £mod_planet_pop_assembly_mult£ Organic and £job_roboticist£ Robotic species without the need of jobs.\n\nGain access to Crucible Worlds.\nCrucible Worlds are a special type of colony designation which gives massive Pop Assembly bonuses.
 
  tr_cybernetics_assembly_standards_assimilators:0 "Crucible Worlds"
