--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -350,7 +350,7 @@
 	concept_tec_job_tec_ai_ordinator_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator$"
 	concept_tec_job_tec_ai_ordinator_plural: "$job_tec_ai_ordinator_plural$"
 	concept_tec_job_tec_ai_ordinator_plural_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator_plural$"
-	concept_tec_job_tec_ai_ordinator_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
+	concept_tec_job_tec_ai_ordinator_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_funds$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
 
   concept_tec_job_tec_ai_ordinator_megacorp: "$job_tec_ai_ordinator$"
 	concept_tec_job_tec_ai_ordinator_megacorp_icon: "£job_tec_ai_ordinator£ $job_tec_ai_ordinator$"
@@ -362,7 +362,7 @@
 	concept_tec_job_tec_ai_operator_icon: "£job_tec_ai_operator£ $job_tec_ai_operator$"
 	concept_tec_job_tec_ai_operator_plural: "$job_tec_ai_operator_plural$"
 	concept_tec_job_tec_ai_operator_plural_icon: "£job_tec_ai_operator£ $job_tec_ai_operator_plural$"
-	concept_tec_job_tec_ai_operator_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
+	concept_tec_job_tec_ai_operator_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_funds$: §G+2§!\nProduces: §Y£unity£ 4 £sr_tec_ai_power£ 2§!\nUpkeep: §Y£trigger_tec_research£ 1§!"
 
 	concept_tec_job_tec_ai_operator_megacorp: "$job_tec_ai_operator$"
 	concept_tec_job_tec_ai_operator_megacorp_icon: "£job_tec_ai_operator£ $job_tec_ai_operator$"
@@ -437,13 +437,13 @@
 	concept_tec_job_bureaucrat_icon: "£job_bureaucrat£ $job_bureaucrat$"
 	concept_tec_job_bureaucrat_plural: "$job_bureaucrat_plural$"
 	concept_tec_job_bureaucrat_plural_icon: "£job_bureaucrat£ $job_bureaucrat_plural$"
-	concept_tec_job_bureaucrat_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_job_bureaucrat_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_funds$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
 	concept_tec_job_manager: "$job_manager$"
 	concept_tec_job_manager_icon: "£job_manager£ $job_manager$"
 	concept_tec_job_manager_plural: "$job_manager_plural$"
 	concept_tec_job_manager_plural_icon: "£job_manager£ $job_manager_plural$"
-	concept_tec_job_manager_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_capacity$: §G+2§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_job_manager_desc: "Stratum: §Y$pop_cat_specialist$§!\n$tec_loc_edict_funds$: §G+2§!\n$tec_loc_trade_value$: §G+2§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 2§!"
 # /
 
 ## Buildings
