--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -1361,11 +1361,11 @@ policy_goods_policy:0 "Consumer Goods Production"
 
  tec_replicant_food_name:0 "Replicant Bioreprocessing"
  tec_replicant_food:0 "Bioreprocessing"
- tec_replicant_food_desc:0 "Biomatter and organic consumption will make our people happy, as no distinction from regular organics will be done.\n\n§EReplicants will consume 0.5 £food£ Food and 0.5 $tec_loc_energy$ as upkeep."
+ tec_replicant_food_desc:0 "Biomatter and organic consumption will make our people happy, as no distinction from regular organics will be done.\n\n§EReplicants will consume §Y0.5 $tec_loc_food$§! and 0.5 §Y$tec_loc_energy$§! as upkeep."
 
  tec_replicant_minerals_name:0 "Replicant Lithoreprocessing"
  tec_replicant_minerals:0 "Lithoreprocessing"
- tec_replicant_minerals_desc:0 "A lithoid-like diet will boost the internal cellular components of our people happy, sating energetic and mineral requirements.\n\n§EReplicants will consume 0.5 $tec_loc_minerals$ and 0.5 $tec_loc_energy$ as upkeep."
+ tec_replicant_minerals_desc:0 "A lithoid-like diet will boost the internal cellular components of our people happy, sating energetic and mineral requirements.\n\n§EReplicants will consume §Y0.5 $tec_loc_minerals$§! and §Y0.5 $tec_loc_energy$§! as upkeep."
 
 
 	policy_tec_replicant_assimilation_policy:0 "Replicant Assimilation"
