--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -960,21 +960,20 @@
 
 	trait_tec_biopsionic_converged_body:0 "Converged Physique"
 	trait_tec_biopsionic_converged_body_desc:0 "§LA perfect body result of the deep and minucious application of biological and psionic convergence techniques.§!"
-	trait_tec_biopsionic_converged_body_effect:0 "$tec_loc_energy$ from Technicians: §G+1§!\n$tec_loc_minerals$ from Miners: §G+1§!\n£food£ Food from Farmers: §G+1§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
+	trait_tec_biopsionic_converged_body_effect:0 "$mod_planet_technician_energy_produces_add$: §G+1§!\n$mod_planet_miners_minerals_produces_add$: §G+1§!\n$mod_planet_farmers_food_produces_add$: §G+1§!\n\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
 
 	trait_tec_biopsionic_converged_skills:0 "Converged Dexterity"
 	trait_tec_biopsionic_converged_skills_desc:0 "§LA perfect set of skills result of the deep and minucious application of biological and psionic convergence techniques.§!"
-	trait_tec_biopsionic_converged_skills_effect:0 "£alloys£ Alloys from Metallurgists: §G+0.5§!\n£consumer_goods£ Consumer Goods from Artisans: §G+0.5§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
+	trait_tec_biopsionic_converged_skills_effect:0 "$mod_planet_metallurgists_alloys_produces_add$: §G+0.5§!\n$mod_planet_artisans_consumer_goods_produces_add$: §G+0.5§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
 
 	trait_tec_biopsionic_converged_mind:0 "Converged Sapience"
 	trait_tec_biopsionic_converged_mind_desc:0 "§LControlled and amplified thoughts result of the deep and minucious application of biological and psionic convergence techniques.§!"
-	trait_tec_biopsionic_converged_mind_effect:0 "£trigger_tec_research£ Research from Researchers: §G+0.5§!\n£unity£ Unity from Administrators: §G+0.5§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
+	trait_tec_biopsionic_converged_mind_effect:0 "$mod_planet_researchers_all_research_produces_add$: §G+0.5§!\n$mod_planet_administrators_unity_produces_add$: §G+0.5§!\nThis effect is amplified by a §G5%§! per §HRitual of Convergence§! for §YConverged Pops§!"
 
 # ------------------------------------------------- CYBERPSIONIC
  # --------------- T2
 	trait_tec_cyberpsionic_main:0 "Infused Cybernetics"
 	trait_tec_cyberpsionic_main_desc:0 "§LThis species has achieved an exotic combination; Using cybernetics they harness and unlock their psionic potential by completely overcharging both their bodies and their minds.§!"
-	TRAIT_TEC_CYBERPSIONIC_MAIN_EFFECT:0 "£trigger_tec_research£ Research Output: §G+20%§!\nLeader Experience Gain: §G+25%§!\n$tec_loc_energy$ Upkeep: §R+0.4§!"
 	leader_trait_tec_cyberpsionic_main:0 "$trait_tec_cyberpsionic_main$"
 	leader_trait_tec_cyberpsionic_main_desc:0 "§LThis leader has internal high-performance experimental cybernetic implants, enhanced and synchronzed with psionic components and capacities, amplifying existing mental capacities to unknown extremes.§!"
 
@@ -994,7 +993,7 @@
 
 	trait_tec_cyberpsionic_equilibrium:0 "Equilibrium Implants"
 	trait_tec_cyberpsionic_equilibrium_desc:0 "§LVia complicated psiotechnological implants, the highest and more responsible members of this society are able to amplify psionic signals towards the entire population, helping the development and growth of every member interconnected.§!"
-	trait_tec_cyberpsionic_EQUILIBRIUM_EFFECT:0 "$tec_loc_stability$ from $mod_base_pop_category_rulers$: §G+0.5§!\n\nGestalt Governors provide +5 stability as extra trait."
+	trait_tec_cyberpsionic_EQUILIBRIUM_EFFECT:0 "$mod_pop_category_rulers_stability_produces_add$: §G+0.5§!\n\nGestalt Governors provide +5 stability as extra trait."
 
 	leader_trait_tec_cyberpsionic_equilibrium:0 "$trait_tec_cyberpsionic_equilibrium$"
 	leader_trait_tec_cyberpsionic_equilibrium_desc:0 "§LUsing highly advanced technological amplifiers, this autonomous drone is able to amplify the Hive Mind psionic signal to all the planets under its control, greatly boosting the cohesion of the population.§!"
@@ -1009,16 +1008,13 @@
 
 	trait_tec_cyberpsionic_infusion:0 "Dust Inhalers"
 	trait_tec_cyberpsionic_infusion_desc:0 "§LUsing refined particles of psionic residuum, this species has specifically designed inhalers to ''stimulate'' their population, amplifying their psionic, mental and bodily capacities.§!"
-	trait_tec_cyberpsionic_INFUSION_EFFECT:0 "$mod_planet_pops_sr_zro_upkeep_add$: §R+0.05§!"
 
 	trait_tec_cyberpsionic_amplifier:0 "Psiotic Amplifiers"
 	trait_tec_cyberpsionic_amplifier_desc:0 "§LBy specific discharges of both energetic and infused psionic material directly to the enhanced nervous systems, this species can greatly develop new levels of cognition and awareness never thought before.§!"
-	trait_tec_cyberpsionic_AMPLIFIER_EFFECT:0 "$mod_planet_pops_sr_zro_upkeep_add$: §R+0.05§!"
 
 	# Specific for robots
 	trait_tec_cyberpsionic_robot_zro:0 "Entropic Core"
 	trait_tec_cyberpsionic_robot_zro_desc:0 "§LRevolutionary generators created by crystalised energetic new psionic materials sustain these robotic units, providing them with extensive capacities.§!"
-	trait_tec_cyberpsionic_ROBOT_ZRO_EFFECT:0 "Instead of §Yconsuming§! it, robotic pops with this trait produce §G+1§! $tec_loc_energy$.\n\n£sr_zro£ Zro Upkeep: §R+0.05§!"
 
 	trait_tec_cyberpsionic_robot_alloys:0 "Lightbended Frame"
 	trait_tec_cyberpsionic_robot_alloys_desc:0 "§LEach robotic unit of this species is conformed by exotic alloys using both nominal materials and specifically infused psionic materials. Instead of shining, their surface bends the light around.§!"
